--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -3,8 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Perfil do Usuário</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
-    <p> Olá {{ nome_usuario }}!!</p>
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nome</th>
+        <th scope="col">Telefone</th>
+        <th scope="col">Email</th>
+        <th scope="col">Objetivo</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for aluno in alunos %}
+    <tr>
+        <th scope="row">{{aluno.id}}</th>
+        <td>{{aluno.nome}}</td>
+        <td>{{aluno.telefone}}</td>
+        <td>{{aluno.email}}</td>
+        <td>{{aluno.objetivo}}</td>
+        <td><a class="btn btn-success" href="/usuarios/editar/{{aluno.id}}">Editar</a></td>
+        <td><a class="btn btn-danger" href="/usuarios/excluir/{{aluno.id}}">Excluir</a></td>
+    {% endfor %}
+    </tbody>
+</table>
+
+
 </body>
 </html>
