--- a/templates/contatos.html
+++ b/templates/contatos.html
@@ -5,7 +5,7 @@
     <title>Contatos</title>
 </head>
 <body>
-    <p>Nossos contados são:</p>
+    <p>Nossos contatos são:</p>
     <p>FrangoAcademia@galinheiro.com</p>
     <p>Telefone (17) 12345-6789</p>
 </body>
