--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -32,7 +32,7 @@
         <option value="emagrecimento">Emagrecimento</option>
         <option value="condicionamento">Condicionamento</option>
     </select>
-    <button type="button" class="btn btn-primary btn-sm">Cadastrar</button>
+    <button class='btn btn-primary'>Cadastrar</button>
 </form>
 <div class="d-flex align-items-center justify-content-center">
     <span>Veja quem também faz parte do Galinheiro</span>
