--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,9 +28,10 @@
 
     <select required name="objetivo">
         <option value="" disabled selected>Escolha seu Objetivo</option>
-        <option value="hipertrofia">Hipertrofia</option>
-        <option value="emagrecimento">Emagrecimento</option>
-        <option value="condicionamento">Condicionamento</option>
+        <option value="Hipertrofia">Hipertrofia</option>
+        <option value="Emagrecimento">Emagrecimento</option>
+        <option value="Condicionamento">Condicionamento</option>
+        <option value="Fortalecimento">Fortalecimento</option>
     </select>
     <button class='btn btn-primary'>Cadastrar</button>
 </form>
