--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<body>
+<body class="container">
 <table class="table table-striped">
     <thead>
     <tr>
@@ -29,7 +29,8 @@
         <td>{{aluno.email}}</td>
         <td>{{aluno.objetivo}}</td>
         <td><a class="btn btn-success" href="/usuarios/editar/{{aluno.id}}">Editar</a></td>
-        <td><a class="btn btn-danger" href="/usuarios/excluir/{{aluno.id}}">Excluir</a></td>
+        <td><a class="btn btn-danger" href="/usuarios/excluir/{{aluno.id}}"
+               onclick="return confirm('Você deseja realmente deletar o aluno {{aluno.nome}}?')">Excluir</a></td>
         {% endfor %}
     </tbody>
 </table>
